<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_layout"
    android:layout_margin="7dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/progress_bar_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:animateLayoutChanges="true"
        android:visibility="gone">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/head_text"
            app:autoSizeMaxTextSize="12sp"
            app:autoSizeMinTextSize="8sp"
            app:autoSizeTextType="uniform" />

        <EditText
            android:id="@+id/amount_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/RUB_Amt"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/listViewItems"
            app:layout_constraintEnd_toStartOf="@+id/btnReset"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_currency_adapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:layout_weight="1"
            app:autoSizeMaxTextSize="12sp"
            android:text="@string/name"
            android:textStyle="bold"
            android:textAlignment="textStart"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform"/>

        <TextView
            android:id="@+id/course_currency_adapter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/course"
            android:textStyle="bold"
            android:textAlignment="center"
            app:autoSizeMaxTextSize="12sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/final_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:text="@string/you_get"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="12sp"
            app:autoSizeMinTextSize="10sp"
            app:autoSizeTextType="uniform" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/currency_recycler"
        android:layout_width="match_parent"
        android:layout_height="402dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="5dp"
        android:scrollbars="vertical" />

    <GridLayout
        android:id="@+id/gridViewLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:columnCount="4"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewItems">

        <Button
            android:id="@+id/btn7"
            android:text="@string/btn7" />

        <Button
            android:id="@+id/btn8"
            android:text="@string/btn8" />

        <Button
            android:id="@+id/btn9"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/btnDelete"
            android:text="@string/btnDelete" />

        <Button
            android:id="@+id/btn4"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/btn5"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/btn6"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/btnPoint"
            android:text="@string/btnPoint" />

        <Button
            android:id="@+id/btn1"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btn2"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/btn3"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/btn0"
            android:text="@string/btn0" />

    </GridLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription=""
        android:src="@android:drawable/ic_popup_sync" />

</LinearLayout>
